# cubedpandas

./: .gitattributes  .gitignore  LICENSE  backlog.md  changelog.md  documentation.md  mkdocs.yml  notes.md  pyproject.toml  readme.md  requirements.txt  setup.py  setup_test.py
.github/workflows/: mkdocs-pages.yml  publish-mkdocs-to-pages.yml  pypi-upload.yml  python-package.yml  static-site-upload.yml  website.yml
cubedpandas/: __init__.py  ambiguities.py  caching_strategy.py  calm_dict.py  casedict.py  cell.py  common.py  context.py  cube.py  cube_aggregation.py  cube_settings.py  date_parser.py  dates.py  dimension.py  dimension_collection.py  expression.py  filter.py  hybrid_dict.py  measure.py  measure_collection.py  member.py  member_match.py  pandas_extension.py  schema.py  settings.py  slice.py  statistics.py
cubedpandas/context/: __init__.py  boolean_operation_context.py  compound_context.py  context.py  context_allocation.py  context_context.py  context_resolver.py  cube_context.py  datetime_resolver.py  dimension_context.py  enums.py  expression.py  filter_context.py  function_context.py  measure_context.py  member_context.py  member_not_found_context.py  slice.py
cubedpandas/datefilter/: __init__.py  base_parser.py  date_filter.py  date_methods.py  date_span.py  parser_en.py  tokenizer.py
cubedpandas/datetext/: __init__.py  base_parser.py  methods.py  parser.py  parser_en.py  tokenizer.py
cubedpandas/plugins/: __init__.py  plugin_a.py
docs/: UserSessionConcept.pptx  best-practise.md  class-cell.md  class-context.md  class-cube.md  class-dimension.md  class-measure.md  class-pandas-ext.md  class-schema.md  class-slice.md  getting-started.md  index.md  installation.md  method-cubed.md  readme_mkdocs.md  use-cases.md  ~$cubedpandas.pptx
gh-pages/: 404.html  index.html  sitemap.xml
pages/: 404.html  index.html  objects.inv  sitemap.xml
research/: expressions_01.py  infix_ops.py  main.py  numpy_vs_pandas.py  rounding.py  testing_dates.py  tokenizer.py
samples/: 00_playground.py  01-first-try.py  01-try-it.py  01_basic_usage.py  01a_basic_usage.py  02_direct_member_access.py  04_simple_slice.py  05_large_slice.py  99_benchmark_01.py  demo.py  dynamic_attribute_population.ipynb  research_01.py  research_02.py  research_03.py  sample.ipynb  sample_01.py
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: test_cell.py  test_common.py  test_compound_context.py  test_cube.py  test_cube_aliases.py  test_cube_ambiguities.py  test_cube_context.py  test_cube_methods.py  test_cube_with_dates.py  test_cube_writeback.py  test_cubed_pandas_library.py  test_date_lookups.py  test_datespan.py  test_datetext_parser.py  test_datetext_parsing.py  test_filter.py  test_measures.py  test_members.py  test_random_dataframes.py  test_real_world_datasets.py  test_schema.py  test_slice.py
(+138 files in other folders)
