[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cubedpandas"
description = "OLAP comfort meets Pandas power!"
keywords = ['pandas', 'analysis', 'database', 'olap', 'planning', 'reporting', 'forecasting', 'multidimensional', 'cube', 'data', 'dataframe', 'pivot', 'table']
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
readme = "README.md"
dynamic = ["version"]
license = {file = "LICENSE"}
requires-python = ">= 3.10"
authors = [
  {name = "Thomas Zeutschler"},
  {email = "cubedpandas@gmail.com"},
]
maintainers = [
    {name = "CubedPandas Developers", email="cubedpandas@gmail.com"},
]
dependencies = [
    "pandas",
    "numpy",
    "python-dateutil",
    "datespan"
]

[project.urls]
Homepage = "https://zeutschler.github.io/cubedpandas/"
Documentation = "https://zeutschler.github.io/cubedpandas/"
Repository = "https://github.com/Zeutschler/cubedpandas.git"
Issues = "https://github.com/Zeutschler/cubedpandas/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
pypi = "https://pypi.org/project/cubedpandas/"

[tool.setuptools.dynamic]
version = {attr = "cubedpandas.__version__"}
